# hfst-optimized-lookup

./: .gitignore  Makefile.am  README
hfst-optimized-lookup/: Makefile  configure  configure.ac
hfst-optimized-lookup-1.0/: AUTHORS  README  configure.ac
hfst-optimized-lookup-1.0/src/: hfst-optimized-lookup.cc  hfst-optimized-lookup.h
hfst-optimized-lookup-1.0/test/: Makefile.am
hfst-optimized-lookup-java/: README  build.xml
hfst-optimized-lookup-java/NooJ-integration/: Engine.java.diff  ImportLexActionListener.java.diff  README  UpdateTablesListener.java.diff
hfst-optimized-lookup-java/NooJ-integration/net/sf/hfst/: HfstOptimizedLookup.java  Transducer.java  WeightedTransducer.java
hfst-optimized-lookup-java/src/: ByteArray.java  FlagDiacriticOperation.java  HfstOptimizedLookup.java  IndexString.java  LetterTrie.java  Transducer.java  TransducerAlphabet.java  TransducerHeader.java  TransducerStream.java  TransducerWeighted.java
hfst-optimized-lookup-java/src/net/sf/hfst/: HfstOptimizedLookup.java  Transducer.java  TransducerHeader.java  TransducerWeighted.java  UnweightedTransducer.java  WeightedTransducer.java
hfst-optimized-lookup-java/src/org/sf/hfst/: ByteArray.java  FlagDiacriticOperation.java  HfstOptimizedLookup.java  LetterTrie.java  TransducerAlphabet.java  TransducerWeighted.java
hfst-optimized-lookup-python/: README  constants.py  hfst-optimized-lookup.py  setup.py  shared.py  transducer.py
hfst-optimized-lookup-python/hfst_lookup/: hfst_lookup.py  transducer.py
hfst-optimized-lookup-python/swig/: hfst_lookup.i  setup.py  transducer.cc  transducer.h
hfst-optimized-lookup/src/: Makefile  hfst-optimized-lookup.cc  hfst-optimized-lookup.h
hfst-optimized-lookup/test/: Makefile  Makefile.am  samibasicout
src/: Makefile.am  hfst-optimized-lookup.h
