bin_PROGRAMS = hfst-optimized-lookup

hfst_optimized_lookup_SOURCES = hfst-optimized-lookup.cc
noinst_HEADERS = hfst-optimized-lookup.h

#hfst_optimized_lookup_SOURCES = main.cc \
#	run-transducer.cc \
#	transducer.cc \
#	transducer-weighted.cc

#noinst_HEADERS = main.h \
#	run-transducer.h \
#	transducer.h \
#	transducer-weighted.h

#hfst-optimized-lookup-compile: $(hfst_run_transducer_OBJECTS)
#	$(CXX) $(LDFLAGS) $(CXXFLAGS) -o $@ $^
